2015-06-07  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: 'make install-fb' error is fixed.

	* version.h.in: 3.5.0 -> 3.5.0post

2015-06-07  Araki Ken  <arakiken@users.sf.net>

	* 3.5.0 released.
	  (tag "rel-3_5_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.5.0.

2015-06-06  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: x_window_move() doesn't redraw screen if the area of
	  child windows fills less than 90% of a parent window.

	* fb/x_display.c: expose_window(all child winodws) in expose_display().

	* x_im_{candidate|status}_screen.c: The change at 2015/05/06 is reverted.

2015-05-31  Araki Ken  <arakiken@users.sf.net>

	* x_layout.c:
	  - If x_layout_t has multiple x_screen_t windows which have a wall picture,
	    x_layout_t plunders it.
	  - total_min_size() -> total_hint_size().

	* x_screen.[ch]: x_screen_reload_color_cache() is added.

	* x_window.h, */x_window.c:
	  - do_expose is added to arguments of x_window_(un)set_wall_picture().
	  - If wall picture is set to a root window, ParentRelative is set to
	    its child windows.
	  - configure_root is added to x_window_t for xlib.

2015-05-26  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, etc/README.ja: Updated.

	* x_screen.[ch], x_shortcut.[ch], x_screen_manager.c:
	  - HEXPAND_SCREEN and VEXPAND_SCREEN are added to shortcut keys.
	  - NEXT_SCREEN, PREV_SCREEN, CLOSE_SCREEN, HEXPAND_SCREEN, VEXPAND_SCREEN
	    shortcuts are ignored if screen isn't splited.

	* x_layout.c: The position of a separator is adjusted to cell width and height.

	* fb/x_window.c: x_window_update() and x_window_update_all() do nothing if
	  x_window_t::is_mapped is 0.

	* vte.c: "MLTERM=X.X.X" environmental variable is set in ml_term_open_pty_wrap().

	* ml_pty_unix.c: "goto return_pty" is called after putenv(), not before it.

2015-05-17  Araki Ken  <arakiken@users.sf.net>

	* README.ja: Updated.
